fix pagination previous page

--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ markdown: redcarpet
 pygments: true
 exclude: ['Linnerfile']
 
-paginate: 5
-paginate_path: "/page:num"
+paginate: 1
+paginate_path: "/page/:num"
