open some extension toggles

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 name: "[ NOISES ]"
 markdown: redcarpet
+redcarpet:
+  extensions: ["tables", "strikethrough", "footnotes"]
 pygments: true
 exclude: ['Linnerfile']
 
